# elementary-template

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md
cmake/: FindVala.cmake
data/: CMakeLists.txt  {{app.id}}.appdata.xml.in.in  {{app.id}}.desktop.in
po/: CMakeLists.txt
src/: CMakeLists.txt  main.vala
